activate user api
